--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <select class="select" name="hero">
                     <option value="" selected>Sort by:</option>
-                    <option value="name">Sort by: Страна</option>
+                    <option value="name">Sort by: Имя</option>
             </select>
         </div>
     </header>
